k8s/policies/constraint-template.yml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredregistry
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredRegistry
      validation:
        openAPIV3Schema:
          type: object
          properties:
            repos:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredregistry

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          allowed := [repo | repo = input.parameters.repos[_]]
          not startswith(container.image, allowed[_])
          msg := sprintf("Image %v comes from an untrusted registry. Allowed registries are: %v", [container.image, allowed])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.initContainers[_]
          allowed := [repo | repo = input.parameters.repos[_]]
          not startswith(container.image, allowed[_])
          msg := sprintf("Image %v comes from an untrusted registry. Allowed registries are: %v", [container.image, allowed])
        }
