k8s/policies/constraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredRegistry
metadata:
  name: require-bansikah-registry
spec:
  match:
    kinds:
      - apiGroups: ["batch"]
        kinds: ["CronJob"]
  parameters:
    repos:
      - "bansikah/" # All images must start with this prefix
